tests/rosetta/out/Smalltalk/biorhythms.out
/workspace/mochi/tests/rosetta/out/Smalltalk/biorhythms.st:11: parse error, expected integer literal or floating-point literal or decimal literal
